bug with rooms on Iphone14 fixed maybe2

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -824,12 +824,19 @@ body {
   border-radius: 10px;
   transform: rotateY(180deg);
   position: absolute;
+  opacity: 0;
   top: 0;
   padding: 20px 15px 12px 15px;
-  z-index: 0;
+  z-index: -1;
+  transition: all 300ms ease;
   @media (max-width: 375px) {
     padding: 10px 15px 12px 15px;
   }
+}
+
+.room__face_back_active {
+  z-index: 5;
+  opacity: 1;
 }
 
 .capacity {
